--- a/galerie.html
+++ b/galerie.html
@@ -1,92 +1,94 @@
-<html><head><base href="https://www.atelierDassi-mecanique-moto.github.io/galerie">
-<title>Galerie - Atelier Dassi Mécanique Moto</title>
-<style>
-  body {
-    font-family: 'Roboto', sans-serif;
-    line-height: 1.6;
-    color: #333;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #f5f5f5;
-  }
-  header {
-    background-color: #1a1a1a;
-    color: #fff;
-    text-align: center;
-    padding: 20px 0;
-    margin-bottom: 30px;
-  }
-  h1 {
-    font-size: 2.5em;
-    margin-bottom: 10px;
-  }
-  nav {
-    background-color: #333;
-    padding: 10px;
-    margin-bottom: 20px;
-  }
-  nav ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-  }
-  nav ul li {
-    margin: 0 15px;
-  }
-  nav ul li a {
-    color: #fff;
-    text-decoration: none;
-    font-weight: bold;
-  }
-  .gallery-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
-  }
-  .gallery-item {
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    overflow: hidden;
-    transition: transform 0.3s ease;
-  }
-  .gallery-item:hover {
-    transform: scale(1.05);
-  }
-  .gallery-item img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-  }
-  .gallery-item .caption {
-    padding: 10px;
-    text-align: center;
-  }
-  .filter-buttons {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 20px;
-  }
-  .filter-button {
-    background-color: #333;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    margin: 0 5px;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-  }
-  .filter-button:hover {
-    background-color: #555;
-  }
-  .filter-button.active {
-    background-color: #1a1a1a;
-  }
-</style>
+<html>
+<head>
+  <base href="https://ateliermecaniquedassi.github.io/galerie">
+  <title>Galerie - Atelier Dassi Mécanique Moto</title>
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      line-height: 1.6;
+      color: #333;
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 20px;
+      background-color: #f5f5f5;
+    }
+    header {
+      background-color: #1a1a1a;
+      color: #fff;
+      text-align: center;
+      padding: 20px 0;
+      margin-bottom: 30px;
+    }
+    h1 {
+      font-size: 2.5em;
+      margin-bottom: 10px;
+    }
+    nav {
+      background-color: #333;
+      padding: 10px;
+      margin-bottom: 20px;
+    }
+    nav ul {
+      list-style-type: none;
+      padding: 0;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+    }
+    nav ul li {
+      margin: 0 15px;
+    }
+    nav ul li a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .gallery-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+    }
+    .gallery-item {
+      background-color: #fff;
+      border-radius: 5px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      overflow: hidden;
+      transition: transform 0.3s ease;
+    }
+    .gallery-item:hover {
+      transform: scale(1.05);
+    }
+    .gallery-item img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+    }
+    .gallery-item .caption {
+      padding: 10px;
+      text-align: center;
+    }
+    .filter-buttons {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 20px;
+    }
+    .filter-button {
+      background-color: #333;
+      color: #fff;
+      border: none;
+      padding: 10px 20px;
+      margin: 0 5px;
+      cursor: pointer;
+      border-radius: 5px;
+      transition: background-color 0.3s ease;
+    }
+    .filter-button:hover {
+      background-color: #555;
+    }
+    .filter-button.active {
+      background-color: #1a1a1a;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -96,9 +98,9 @@
   
   <nav>
     <ul>
-      <li><a href="https://www.atelierDassi-mecanique-moto.github.io">Accueil</a></li>
-      <li><a href="https://www.atelierDassi-mecanique-moto.github.io/blog">Blog</a></li>
-      <li><a href="https://www.atelierDassi-mecanique-moto.github.io/contact">Contact</a></li>
+      <li><a href="https://ateliermecaniquedassi.github.io">Accueil</a></li>
+      <li><a href="https://ateliermecaniquedassi.github.io/blog.html">Blog</a></li>
+      <li><a href="https://ateliermecaniquedassi.github.io/contact">Contact</a></li>
     </ul>
   </nav>
 
@@ -174,4 +176,5 @@
       });
     });
   </script>
-</body></html>
+</body>
+</html>
