--- a/index.html
+++ b/index.html
@@ -2,81 +2,7 @@
 <head>
   <base href="https://ateliermecaniquedassi.github.io">
   <title>Atelier Dassi - Mécanique Moto</title>
-  <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-      line-height: 1.6;
-      color: #333;
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 20px;
-      background-color: #f5f5f5;
-    }
-    header {
-      background-color: #1a1a1a;
-      color: #fff;
-      text-align: center;
-      padding: 20px 0;
-      margin-bottom: 30px;
-    }
-    h1 {
-      font-size: 2.5em;
-      margin-bottom: 10px;
-    }
-    nav {
-      background-color: #333;
-      padding: 10px;
-    }
-    nav ul {
-      list-style-type: none;
-      padding: 0;
-      margin: 0;
-      display: flex;
-      justify-content: center;
-    }
-    nav ul li {
-      margin: 0 15px;
-    }
-    nav ul li a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    main {
-      display: grid;
-      grid-template-columns: 2fr 1fr;
-      gap: 30px;
-    }
-    .services, .contact, .news {
-      background-color: #fff;
-      padding: 20px;
-      border-radius: 5px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      margin-bottom: 20px;
-    }
-    .motorcycle-animation {
-      width: 100px;
-      height: 60px;
-      background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 60"><path d="M20 40 Q30 20 40 40 Q50 60 60 40 Q70 20 80 40" stroke="black" fill="none" stroke-width="2"/><circle cx="30" cy="50" r="10" fill="black"/><circle cx="70" cy="50" r="10" fill="black"/></svg>') no-repeat;
-      animation: drive 2s linear infinite;
-    }
-    @keyframes drive {
-      0% { transform: translateX(-100px); }
-      100% { transform: translateX(100%); }
-    }
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 10px;
-      margin-top: 20px;
-    }
-    .gallery img {
-      width: 100%;
-      height: 150px;
-      object-fit: cover;
-      border-radius: 5px;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
