--- a/blog.html
+++ b/blog.html
@@ -2,106 +2,7 @@
 <head>
   <base href="https://ateliermecaniquedassi.github.io/blog">
   <title>Blog - Atelier Dassi Mécanique Moto</title>
-  <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-      line-height: 1.6;
-      color: #333;
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 20px;
-      background-color: #f5f5f5;
-    }
-    header {
-      background-color: #1a1a1a;
-      color: #fff;
-      text-align: center;
-      padding: 20px 0;
-      margin-bottom: 30px;
-    }
-    h1 {
-      font-size: 2.5em;
-      margin-bottom: 10px;
-    }
-    nav {
-      background-color: #333;
-      padding: 10px;
-      margin-bottom: 20px;
-    }
-    nav ul {
-      list-style-type: none;
-      padding: 0;
-      margin: 0;
-      display: flex;
-      justify-content: center;
-    }
-    nav ul li {
-      margin: 0 15px;
-    }
-    nav ul li a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    .blog-container {
-      display: grid;
-      grid-template-columns: 2fr 1fr;
-      gap: 30px;
-    }
-    .blog-posts {
-      background-color: #fff;
-      padding: 20px;
-      border-radius: 5px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    .blog-post {
-      margin-bottom: 30px;
-      border-bottom: 1px solid #eee;
-      padding-bottom: 20px;
-    }
-    .blog-post:last-child {
-      border-bottom: none;
-    }
-    .blog-post h2 {
-      color: #1a1a1a;
-    }
-    .blog-post .date {
-      color: #777;
-      font-style: italic;
-    }
-    .sidebar {
-      background-color: #fff;
-      padding: 20px;
-      border-radius: 5px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    .sidebar h3 {
-      border-bottom: 2px solid #1a1a1a;
-      padding-bottom: 10px;
-    }
-    .sidebar ul {
-      list-style-type: none;
-      padding: 0;
-    }
-    .sidebar ul li {
-      margin-bottom: 10px;
-    }
-    .sidebar ul li a {
-      color: #333;
-      text-decoration: none;
-    }
-    .sidebar ul li a:hover {
-      color: #1a1a1a;
-      text-decoration: underline;
-    }
-    .featured-image {
-      width: 100%;
-      height: 200px;
-      object-fit: cover;
-      border-radius: 5px;
-      margin-bottom: 15px;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
