--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <base href="https://ateliermecaniquedassi.github.io">
+  <base href="/">
   <title>Atelier Dassi - Mécanique Moto</title>
   <link rel="stylesheet" href="styles.css">
 </head>
