--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="fr">
 <head>
-  <base href="/">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Atelier Dassi - Mécanique Moto</title>
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -8,7 +10,6 @@
   <header>
     <h1>Atelier Dassi</h1>
     <p>Mécanique Moto de Précision</p>
-    <div class="motorcycle-animation"></div>
   </header>
   
   <nav>
@@ -21,74 +22,54 @@
   </nav>
 
   <main>
-    <div>
-      <section class="services" id="services">
-        <h2>Nos Services</h2>
-        <ul>
-          <li>Réparation et entretien de motos classiques et modernes</li>
-          <li>Restauration de motos vintage</li>
-          <li>Personnalisation et customisation</li>
-          <li>Diagnostic électronique avancé</li>
-          <li>Réglage de suspension sur mesure</li>
-          <li>Préparation pour courses et rallyes</li>
-        </ul>
-        <p>Chez Atelier Dassi, nous combinons expertise technique et passion pour la moto. Notre équipe de mécaniciens qualifiés utilise les dernières technologies pour assurer des réparations de haute qualité et un service personnalisé. Avec plus de 30 ans d'expérience, nous sommes la référence pour la réparation de toute moto 2 temps et 4 temps conduite depuis des générations.</p>
-      </section>
+    <section class="services" id="services">
+      <h2>Nos Services</h2>
+      <ul>
+        <li>Réparation et entretien de motos classiques et modernes</li>
+        <li>Restauration de motos vintage</li>
+        <li>Personnalisation et customisation</li>
+        <li>Diagnostic électronique avancé</li>
+        <li>Réglage de suspension sur mesure</li>
+        <li>Préparation pour courses et rallyes</li>
+      </ul>
+      <p>Chez Atelier Dassi, nous combinons expertise technique et passion pour la moto. Notre équipe de mécaniciens qualifiés utilise les dernières technologies pour assurer des réparations de haute qualité et un service personnalisé. Avec plus de 30 ans d'expérience, nous sommes la référence pour la réparation de toute moto 2 temps et 4 temps conduite depuis des générations.</p>
+    </section>
 
-      <section class="news">
-        <h2>Actualités</h2>
-        <article>
-          <h3>Nouveau Service : Diagnostic Électronique Avancé</h3>
-          <p>Nous sommes fiers d'annoncer l'acquisition d'un équipement de diagnostic électronique de dernière génération. Ce nouvel outil nous permet de diagnostiquer rapidement et précisément les problèmes sur les motos modernes équipées de systèmes électroniques complexes.</p>
-        </article>
-        <article>
-          <h3>Préparation pour le Grand Paris Dakar Classic</h3>
-          <p>L'Atelier Dassi est en pleine effervescence ! Nous préparons actuellement une Yamaha XT600Z Ténéré de 1983 pour le prochain Grand Paris Dakar Classic. Suivez l'avancement de ce projet passionnant sur notre blog.</p>
-        </article>
-      </section>
+    <section class="news">
+      <h2>Actualités</h2>
+      <article>
+        <h3>Nouveau Service : Diagnostic Électronique Avancé</h3>
+        <p>Nous sommes fiers d'annoncer l'acquisition d'un équipement de diagnostic électronique de dernière génération. Ce nouvel outil nous permet de diagnostiquer rapidement et précisément les problèmes sur les motos modernes équipées de systèmes électroniques complexes.</p>
+      </article>
+      <article>
+        <h3>Préparation pour le Grand Paris Dakar Classic</h3>
+        <p>L'Atelier Dassi est en pleine effervescence ! Nous préparons actuellement une Yamaha XT600Z Ténéré de 1983 pour le prochain Grand Paris Dakar Classic. Suivez l'avancement de ce projet passionnant sur notre blog.</p>
+      </article>
+    </section>
 
-      <section class="gallery">
-        <img src="https://example.com/moto1.jpg" alt="Restauration d'une moto vintage" width="300" height="200">
-        <img src="https://example.com/moto2.jpg" alt="Customisation d'une moto moderne" width="300" height="200">
-        <img src="https://example.com/moto3.jpg" alt="Préparation d'une moto de course" width="300" height="200">
-      </section>
-    </div>
-
-    <div>
-      <section class="contact" id="contact">
-        <h2>Contactez-nous</h2>
-        <p>📍 Commune de Zè, Bénin</p>
-        <p>📞 +229 97981218</p>
-        <p>✉️ <a href="mailto:dassiedmond@gmail.com">dassiedmond@gmail.com</a></p>
-        <form action="https://ateliermecaniquedassi.github.io/submit-form" method="POST">
-          <input type="text" name="name" placeholder="Votre nom" required><br>
-          <input type="email" name="email" placeholder="Votre email" required><br>
-          <textarea name="message" placeholder="Votre message" required></textarea><br>
-          <button type="submit">Envoyer</button>
-        </form>
-      </section>
-
-      <section class="hours">
-        <h2>Horaires d'ouverture</h2>
-        <ul>
-          <li>Lundi - Vendredi : 8h00 - 20h00</li>
-          <li>Samedi : 8h00 - 18h00</li>
-          <li>Dimanche : Fermé</li>
-        </ul>
-      </section>
-    </div>
+    <section class="gallery">
+      <img src="https://example.com/moto1.jpg" alt="Restauration d'une moto vintage">
+      <img src="https://example.com/moto2.jpg" alt="Customisation d'une moto moderne">
+      <img src="https://example.com/moto3.jpg" alt="Préparation d'une moto de course">
+    </section>
   </main>
 
-  <footer>
+  <section class="contact" id="contact">
+    <h2>Contactez-nous</h2>
+    <p>📍 Commune de Zè, Bénin</p>
+    <p>📞 +229 97981218</p>
+    <p>✉️ <a href="mailto:dassiedmond@gmail.com">dassiedmond@gmail.com</a></p>
+    <form action="https://ateliermecaniquedassi.github.io/submit-form" method="POST">
+      <input type="text" name="name" placeholder="Votre nom" required><br>
+      <input type="email" name="email" placeholder="Votre email" required><br>
+      <textarea name="message" placeholder="Votre message" required></textarea><br>
+      <button type="submit">Envoyer</button>
+    </form>
+  </section>
+
+  <footer class="footer">
     <p>&copy; 2023 Atelier Dassi - Mécanique Moto. Tous droits réservés.</p>
     <p>Suivez-nous sur <a href="https://www.instagram.com/atelierdassimoto">Instagram</a> et <a href="https://www.facebook.com/atelierdassimoto">Facebook</a></p>
   </footer>
-
-  <script>
-    document.querySelector('form').addEventListener('submit', function(e) {
-      e.preventDefault();
-      alert('Merci pour votre message ! Nous vous contacterons bientôt.');
-    });
-  </script>
 </body>
 </html>
