--- a/galerie.html
+++ b/galerie.html
@@ -1,6 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="fr">
 <head>
-  <base href="https://ateliermecaniquedassi.github.io/galerie">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Galerie - Atelier Dassi Mécanique Moto</title>
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -12,9 +14,9 @@
   
   <nav>
     <ul>
-      <li><a href="https://ateliermecaniquedassi.github.io">Accueil</a></li>
-      <li><a href="https://ateliermecaniquedassi.github.io/blog.html">Blog</a></li>
-      <li><a href="https://ateliermecaniquedassi.github.io/contact">Contact</a></li>
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="blog.html">Blog</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 
@@ -27,44 +29,32 @@
 
   <div class="gallery-container">
     <div class="gallery-item" data-category="restauration">
-      <img src="https://example.com/moto1.jpg" alt="Restauration d'une Honda CB750 de 1969" width="250" height="200">
+      <img src="https://example.com/moto1.jpg" alt="Restauration d'une Honda CB750 de 1969">
       <div class="caption">Restauration Honda CB750 (1969)</div>
     </div>
     <div class="gallery-item" data-category="customisation">
-      <img src="https://example.com/moto2.jpg" alt="Customisation d'une Triumph Bonneville" width="250" height="200">
+      <img src="https://example.com/moto2.jpg" alt="Customisation d'une Triumph Bonneville">
       <div class="caption">Customisation Triumph Bonneville</div>
     </div>
     <div class="gallery-item" data-category="preparation">
-      <img src="https://example.com/moto3.jpg" alt="Préparation Yamaha XT600Z Ténéré pour le Paris-Dakar Classic" width="250" height="200">
+      <img src="https://example.com/moto3.jpg" alt="Préparation Yamaha XT600Z Ténéré pour le Paris-Dakar Classic">
       <div class="caption">Préparation Yamaha XT600Z Ténéré (Paris-Dakar Classic)</div>
     </div>
     <div class="gallery-item" data-category="restauration">
-      <img src="https://example.com/moto4.jpg" alt="Restauration d'une Vespa 150 de 1963" width="250" height="200">
+      <img src="https://example.com/moto4.jpg" alt="Restauration d'une Vespa 150 de 1963">
       <div class="caption">Restauration Vespa 150 (1963)</div>
     </div>
     <div class="gallery-item" data-category="customisation">
-      <img src="https://example.com/moto5.jpg" alt="Customisation d'une Harley-Davidson Sportster en Café Racer" width="250" height="200">
+      <img src="https://example.com/moto5.jpg" alt="Customisation d'une Harley-Davidson Sportster en Café Racer">
       <div class="caption">Harley-Davidson Sportster Café Racer</div>
     </div>
     <div class="gallery-item" data-category="preparation">
-      <img src="https://example.com/moto6.jpg" alt="Préparation Ducati Panigale V4R pour le championnat Superbike" width="250" height="200">
+      <img src="https://example.com/moto6.jpg" alt="Préparation Ducati Panigale V4R pour le championnat Superbike">
       <div class="caption">Préparation Ducati Panigale V4R (Superbike)</div>
-    </div>
-    <div class="gallery-item" data-category="restauration">
-      <img src="https://example.com/moto7.jpg" alt="Restauration d'une BMW R75/5 de 1971" width="250" height="200">
-      <div class="caption">Restauration BMW R75/5 (1971)</div>
-    </div>
-    <div class="gallery-item" data-category="customisation">
-      <img src="https://example.com/moto8.jpg" alt="Customisation d'une Royal Enfield Classic 500 en Scrambler" width="250" height="200">
-      <div class="caption">Royal Enfield Classic 500 Scrambler</div>
-    </div>
-    <div class="gallery-item" data-category="preparation">
-      <img src="https://example.com/moto9.jpg" alt="Préparation KTM 450 Rally pour le Rallye du Maroc" width="250" height="200">
-      <div class="caption">Préparation KTM 450 Rally (Rallye du Maroc)</div>
     </div>
   </div>
 
-  <footer>
+  <footer class="footer">
     <p>&copy; 2023 Atelier Dassi - Mécanique Moto. Tous droits réservés.</p>
     <p>Suivez-nous sur <a href="https://www.instagram.com/atelierdassimoto">Instagram</a> et <a href="https://www.facebook.com/atelierdassimoto">Facebook</a></p>
   </footer>
