--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="fr">
 <head>
-  <base href="https://ateliermecaniquedassi.github.io/blog">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog - Atelier Dassi Mécanique Moto</title>
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -12,39 +14,39 @@
   
   <nav>
     <ul>
-      <li><a href="https://ateliermecaniquedassi.github.io">Accueil</a></li>
-      <li><a href="https://ateliermecaniquedassi.github.io/galerie.html">Galerie</a></li>
-      <li><a href="https://ateliermecaniquedassi.github.io/contact">Contact</a></li>
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="galerie.html">Galerie</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 
   <div class="blog-container">
     <main class="blog-posts">
       <article class="blog-post">
-        <img src="https://example.com/honda-cb750-restoration.jpg" alt="Honda CB750 en cours de restauration" class="featured-image" width="600" height="400">
+        <img src="https://example.com/honda-cb750-restoration.jpg" alt="Honda CB750 en cours de restauration" class="featured-image">
         <h2>L'Art de la Restauration : Redonner Vie à une Classique</h2>
         <p class="date">Publié le 15 juin 2023</p>
         <p>La semaine dernière, nous avons eu le plaisir de terminer la restauration d'une magnifique Honda CB750 de 1969. Ce projet a été un véritable défi, mais aussi une source immense de satisfaction. Nous vous emmenons dans les coulisses de cette restauration passionnante...</p>
         <p>La Honda CB750 est une moto emblématique qui a révolutionné l'industrie lors de son lancement. Notre client nous a confié sa CB750 dans un état qui nécessitait une restauration complète. Nous avons commencé par un démontage minutieux, documentant chaque étape...</p>
-        <a href="https://ateliermecaniquedassi.github.io/blog/restauration-honda-cb750">Lire la suite</a>
+        <a href="restauration-honda-cb750.html">Lire la suite</a>
       </article>
 
       <article class="blog-post">
-        <img src="https://example.com/fuel-injection-system.jpg" alt="Système d'injection électronique moderne" class="featured-image" width="600" height="400">
+        <img src="https://example.com/fuel-injection-system.jpg" alt="Système d'injection électronique moderne" class="featured-image">
         <h2>Les Avantages de l'Injection Électronique sur les Motos Modernes</h2>
         <p class="date">Publié le 3 juin 2023</p>
         <p>L'injection électronique a révolutionné le monde de la moto. Dans cet article, nous explorons les nombreux avantages de cette technologie par rapport aux carburateurs traditionnels. De la consommation de carburant aux performances, découvrez pourquoi l'injection est devenue la norme...</p>
         <p>L'un des principaux avantages de l'injection électronique est sa capacité à optimiser le mélange air-carburant en temps réel. Cela se traduit par une meilleure efficacité énergétique, des émissions réduites et des performances plus constantes dans diverses conditions...</p>
-        <a href="https://ateliermecaniquedassi.github.io/blog/avantages-injection-electronique">Lire la suite</a>
+        <a href="avantages-injection-electronique.html">Lire la suite</a>
       </article>
 
       <article class="blog-post">
-        <img src="https://example.com/yamaha-xt600z-tenere.jpg" alt="Yamaha XT600Z Ténéré en préparation pour le rallye" class="featured-image" width="600" height="400">
+        <img src="https://example.com/yamaha-xt600z-tenere.jpg" alt="Yamaha XT600Z Ténéré en préparation pour le rallye" class="featured-image">
         <h2>Préparation Moto pour le Grand Paris Dakar Classic</h2>
         <p class="date">Publié le 20 mai 2023</p>
         <p>L'excitation est à son comble ! Nous sommes fiers d'annoncer que nous préparons actuellement une Yamaha XT600Z Ténéré de 1983 pour le prochain Grand Paris Dakar Classic. Dans ce post, nous partageons les défis uniques liés à la préparation d'une moto pour cette aventure épique...</p>
         <p>La préparation d'une moto pour un rallye comme le Paris Dakar Classic nécessite une approche différente de nos projets habituels. Nous devons non seulement restaurer la moto à son état d'origine, mais aussi l'améliorer pour qu'elle puisse endurer les conditions extrêmes du désert...</p>
-        <a href="https://ateliermecaniquedassi.github.io/blog/preparation-grand-paris-dakar-classic">Lire la suite</a>
+        <a href="preparation-grand-paris-dakar-classic.html">Lire la suite</a>
       </article>
     </main>
 
@@ -52,19 +54,19 @@
       <section>
         <h3>Catégories</h3>
         <ul>
-          <li><a href="https://ateliermecaniquedassi.github.io/blog/categorie/restauration">Restauration</a></li>
-          <li><a href="https://ateliermecaniquedassi.github.io/blog/categorie/technologie">Technologie</a></li>
-          <li><a href="https://ateliermecaniquedassi.github.io/blog/categorie/courses">Courses et Rallyes</a></li>
-          <li><a href="https://ateliermecaniquedassi.github.io/blog/categorie/entretien">Conseils d'Entretien</a></li>
+          <li><a href="categorie/restauration.html">Restauration</a></li>
+          <li><a href="categorie/technologie.html">Technologie</a></li>
+          <li><a href="categorie/courses.html">Courses et Rallyes</a></li>
+          <li><a href="categorie/entretien.html">Conseils d'Entretien</a></li>
         </ul>
       </section>
 
       <section>
         <h3>Articles Récents</h3>
         <ul>
-          <li><a href="https://ateliermecaniquedassi.github.io/blog/choisir-huile-moto">Comment Choisir la Bonne Huile pour Votre Moto</a></li>
-          <li><a href="https://ateliermecaniquedassi.github.io/blog/evolution-freinage-moto">L'Évolution des Systèmes de Freinage Moto</a></li>
-          <li><a href="https://ateliermecaniquedassi.github.io/blog/customisation-cafe-racer">La Tendance Café Racer : Entre Style et Performance</a></li>
+          <li><a href="choisir-huile-moto.html">Comment Choisir la Bonne Huile pour Votre Moto</a></li>
+          <li><a href="evolution-freinage-moto.html">L'Évolution des Systèmes de Freinage Moto</a></li>
+          <li><a href="customisation-cafe-racer.html">La Tendance Café Racer : Entre Style et Performance</a></li>
         </ul>
       </section>
 
@@ -80,7 +82,7 @@
     </aside>
   </div>
 
-  <footer>
+  <footer class="footer">
     <p>&copy; 2023 Atelier Dassi - Mécanique Moto. Tous droits réservés.</p>
     <p>Commune de Zè, Bénin | Tel: +229 97981218 | Email: <a href="mailto:dassiedmond@gmail.com">dassiedmond@gmail.com</a></p>
   </footer>
