--- a/galerie.html
+++ b/galerie.html
@@ -29,28 +29,28 @@
 
   <div class="gallery-container">
     <div class="gallery-item" data-category="restauration">
-      <img src="https://example.com/moto1.jpg" alt="Restauration d'une Honda CB750 de 1969">
-      <div class="caption">Restauration Honda CB750 (1969)</div>
+      <img src="https://fr.made-in-china.com/co_5d857df1e4584fc8/product_Motorcycle-Hot-Sale-Africa-Market-Sy125-8-Sanya_eooegoyry.jpg" alt="Restauration d'une moto Sanya SY125-8">
+      <div class="caption">Restauration Sanya SY125-8</div>
     </div>
     <div class="gallery-item" data-category="customisation">
-      <img src="https://example.com/moto2.jpg" alt="Customisation d'une Triumph Bonneville">
-      <div class="caption">Customisation Triumph Bonneville</div>
+      <img src="https://cm.coinafrique.com/categorie/motos-et-scooters/sanili.jpg" alt="Customisation d'une moto Sanili">
+      <div class="caption">Customisation Sanili</div>
     </div>
     <div class="gallery-item" data-category="preparation">
-      <img src="https://example.com/moto3.jpg" alt="Préparation Yamaha XT600Z Ténéré pour le Paris-Dakar Classic">
-      <div class="caption">Préparation Yamaha XT600Z Ténéré (Paris-Dakar Classic)</div>
+      <img src="https://example.com/moto3.jpg" alt="Préparation d'une moto TVS">
+      <div class="caption">Préparation TVS</div>
     </div>
     <div class="gallery-item" data-category="restauration">
-      <img src="https://example.com/moto4.jpg" alt="Restauration d'une Vespa 150 de 1963">
-      <div class="caption">Restauration Vespa 150 (1963)</div>
+      <img src="https://example.com/moto4.jpg" alt="Restauration d'une moto Vespa">
+      <div class="caption">Restauration Vespa</div>
     </div>
     <div class="gallery-item" data-category="customisation">
-      <img src="https://example.com/moto5.jpg" alt="Customisation d'une Harley-Davidson Sportster en Café Racer">
-      <div class="caption">Harley-Davidson Sportster Café Racer</div>
+      <img src="https://example.com/moto5.jpg" alt="Customisation d'une moto Mate">
+      <div class="caption">Customisation Moto Mate</div>
     </div>
     <div class="gallery-item" data-category="preparation">
-      <img src="https://example.com/moto6.jpg" alt="Préparation Ducati Panigale V4R pour le championnat Superbike">
-      <div class="caption">Préparation Ducati Panigale V4R (Superbike)</div>
+      <img src="https://example.com/moto6.jpg" alt="Préparation d'une moto Bebe CT">
+      <div class="caption">Préparation Bebe CT</div>
     </div>
   </div>
 
