--- a/index.html
+++ b/index.html
@@ -25,32 +25,52 @@
     <section class="services" id="services">
       <h2>Nos Services</h2>
       <ul>
-        <li>Réparation et entretien de motos classiques et modernes</li>
-        <li>Restauration de motos vintage</li>
-        <li>Personnalisation et customisation</li>
-        <li>Diagnostic électronique avancé</li>
-        <li>Réglage de suspension sur mesure</li>
-        <li>Préparation pour courses et rallyes</li>
+        <li><strong>Réparation et entretien de motos classiques et modernes</strong><br>
+          Nous offrons un service complet pour assurer le bon fonctionnement de vos motos, qu'elles soient anciennes ou récentes.</li>
+        <li><strong>Réparation de motos à 2 temps et à 4 temps</strong><br>
+          Spécialistes des marques telles que Vespa, Sanya, Sanili, CG, TVS, Mate, et Honda, nous nous occupons de toutes les réparations nécessaires pour vos motos à deux et quatre temps.</li>
+        <li><strong>Personnalisation et customisation</strong><br>
+          Donnez à votre moto un look unique et adapté à vos goûts. Nous vous aidons à personnaliser votre moto pour qu'elle se distingue sur les routes.</li>
+        <li><strong>Diagnostic électronique avancé</strong><br>
+          Grâce à notre équipement de pointe, nous pouvons diagnostiquer rapidement et précisément les problèmes sur les motos modernes équipées de systèmes électroniques complexes.</li>
+        <li><strong>Réglage de suspension sur mesure</strong><br>
+          Améliorez votre confort de conduite et les performances de votre moto avec un réglage de suspension personnalisé, adapté à vos besoins et à votre style de conduite.</li>
+        <li><strong>Préparation pour compétitions et randonnées</strong><br>
+          Que vous participiez à des compétitions locales ou que vous planifiez de longues randonnées, nous préparons votre moto pour qu'elle soit prête à affronter tous les défis.</li>
       </ul>
-      <p>Chez Atelier Dassi, nous combinons expertise technique et passion pour la moto. Notre équipe de mécaniciens qualifiés utilise les dernières technologies pour assurer des réparations de haute qualité et un service personnalisé. Avec plus de 30 ans d'expérience, nous sommes la référence pour la réparation de toute moto 2 temps et 4 temps conduite depuis des générations.</p>
+      <p>Chez Atelier Dassi, nous combinons expertise technique et passion pour la moto. Notre équipe de mécaniciens qualifiés utilise les dernières technologies pour assurer des réparations de haute qualité et un service personnalisé. Avec plus de 30 ans d'expérience, nous sommes la référence pour la réparation de motos à 2 temps et 4 temps conduites depuis des générations.</p>
     </section>
 
     <section class="news">
       <h2>Actualités</h2>
       <article>
         <h3>Nouveau Service : Diagnostic Électronique Avancé</h3>
-        <p>Nous sommes fiers d'annoncer l'acquisition d'un équipement de diagnostic électronique de dernière génération. Ce nouvel outil nous permet de diagnostiquer rapidement et précisément les problèmes sur les motos modernes équipées de systèmes électroniques complexes.</p>
+        <p>Nous appartenons à l'Association des Artisans Professionnels de Zè et offrons des formations de pointe à nos apprentis. Nous sommes fiers d'annoncer notre partenariat avec d'autres garages et l'acquisition de nouveaux équipements permettant des réparations soignées. Ce nouvel outil nous permet de diagnostiquer rapidement et précisément les problèmes sur les motos modernes équipées de systèmes électroniques complexes.</p>
       </article>
       <article>
-        <h3>Préparation pour le Grand Paris Dakar Classic</h3>
-        <p>L'Atelier Dassi est en pleine effervescence ! Nous préparons actuellement une Yamaha XT600Z Ténéré de 1983 pour le prochain Grand Paris Dakar Classic. Suivez l'avancement de ce projet passionnant sur notre blog.</p>
+        <h3>Préparation pour les Événements Locaux à Zè</h3>
+        <p>L'Atelier Dassi est en pleine effervescence ! Nous préparons actuellement plusieurs motos pour les événements locaux dans la commune de Zè. Que ce soit pour des rassemblements de motards, des démonstrations ou des compétitions locales, notre équipe travaille avec passion pour que chaque moto soit prête à briller. Suivez l'avancement de ces projets passionnants sur notre blog.</p>
       </article>
     </section>
 
-    <section class="gallery">
-      <img src="https://example.com/moto1.jpg" alt="Restauration d'une moto vintage">
-      <img src="https://example.com/moto2.jpg" alt="Customisation d'une moto moderne">
-      <img src="https://example.com/moto3.jpg" alt="Préparation d'une moto de course">
+    <section class="projects">
+      <h2>Projets en Cours</h2>
+      <div class="gallery">
+        <img src="files/photos/img1.jpg" alt="Réparation de moto">
+        <img src="files/photos/img2.jpg" alt="Customisation d'une moto moderne">
+        <img src="files/photos/img3.jpg" alt="Préparation d'une moto de course">
+        <img src="files/photos/img4.jpg" alt="En pleine réparation chez nous">
+      </div>
+      <div>
+        <h3>Restauration d'une Moto Vintage</h3>
+        <p>Notre équipe redonne vie à des motos anciennes avec passion et savoir-faire.</p>
+
+        <h3>Personnalisation d'une Moto Moderne</h3>
+        <p>Transformez votre moto moderne avec un design unique et des améliorations sur mesure.</p>
+
+        <h3>Préparation d'une Moto pour Compétition</h3>
+        <p>Nous préparons votre moto pour qu'elle soit au top de ses performances pour les compétitions locales.</p>
+      </div>
     </section>
   </main>
 
@@ -73,4 +93,3 @@
   </footer>
 </body>
 </html>
- 
