--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="files/photos/IMG1.jpg" class="d-block w-100" alt="Réparation de moto">
+        <img src="files/photos/IMG1.png" class="d-block w-100" alt="Réparation de moto">
       </div>
       <div class="carousel-item">
-        <img src="files/photos/IMG2.jpg" class="d-block w-100" alt="Customisation d'une moto moderne">
+        <img src="files/photos/IMG2.png" class="d-block w-100" alt="Customisation d'une moto moderne">
       </div>
       <div class="carousel-item">
-        <img src="files/photos/IMG3.jpg" class="d-block w-100" alt="Préparation d'une moto de course">
+        <img src="files/photos/IMG3.png" class="d-block w-100" alt="Préparation d'une moto de course">
       </div>
       <div class="carousel-item">
         <img src="files/photos/IMG4.png" class="d-block w-100" alt="En pleine réparation chez nous">
