--- a/galerie.html
+++ b/galerie.html
@@ -30,7 +30,7 @@
   <div class="gallery-container">
     <div class="gallery-item" data-category="restauration">
       <img src="https://fr.made-in-china.com/co_5d857df1e4584fc8/product_Motorcycle-Hot-Sale-Africa-Market-Sy125-8-Sanya_eooegoyry.jpg" alt="Restauration d'une moto Sanya SY125-8">
-      <div class="caption">Restauration Sanya SY125-8</div>
+      <div class="caption">Réparation Moto Sanya SY125-8</div>
     </div>
     <div class="gallery-item" data-category="customisation">
       <img src="https://cm.coinafrique.com/categorie/motos-et-scooters/sanili.jpg" alt="Customisation d'une moto Sanili">
@@ -38,11 +38,11 @@
     </div>
     <div class="gallery-item" data-category="preparation">
       <img src="https://example.com/moto3.jpg" alt="Préparation d'une moto TVS">
-      <div class="caption">Préparation TVS</div>
+      <div class="caption">Réparation TVS</div>
     </div>
     <div class="gallery-item" data-category="restauration">
       <img src="https://example.com/moto4.jpg" alt="Restauration d'une moto Vespa">
-      <div class="caption">Restauration Vespa</div>
+      <div class="caption">Réparation Vespa</div>
     </div>
     <div class="gallery-item" data-category="customisation">
       <img src="https://example.com/moto5.jpg" alt="Customisation d'une moto Mate">
@@ -50,12 +50,12 @@
     </div>
     <div class="gallery-item" data-category="preparation">
       <img src="https://example.com/moto6.jpg" alt="Préparation d'une moto Bebe CT">
-      <div class="caption">Préparation Bebe CT</div>
+      <div class="caption">Mobylette - Cyclomoteur Peugeot BB CT</div>
     </div>
   </div>
 
   <footer class="footer">
-    <p>&copy; 2023 Atelier Dassi - Mécanique Moto. Tous droits réservés.</p>
+    <p>&copy; 2024 Atelier Dassi - Mécanique Moto. Tous droits réservés.</p>
     <p>Suivez-nous sur <a href="https://www.instagram.com/atelierdassimoto">Instagram</a> et <a href="https://www.facebook.com/atelierdassimoto">Facebook</a></p>
   </footer>
 
