--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <h1>Atelier Dassi</h1>
+    <h1>Atelier Dassi Edmond</h1>
     <p>Mécanique Moto de Précision</p>
   </header>
   
@@ -116,7 +116,7 @@
   </section>
 
   <footer class="footer">
-    <p>&copy; 2023 Atelier Dassi - Mécanique Moto. Tous droits réservés.</p>
+    <p>&copy; 2024 Atelier Dassi - Mécanique Moto. Tous droits réservés.</p>
     <p>Suivez-nous sur <a href="https://www.instagram.com/atelierdassimoto">Instagram</a> et <a href="https://www.facebook.com/atelierdassimoto">Facebook</a></p>
   </footer>
 
