--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Blog Atelier Dassi</h1>
+    <h1>Blog Atelier Dassi Edmond</h1>
     <p>Passion, Technique et Deux-Roues</p>
   </header>
   
@@ -83,7 +83,7 @@
   </div>
 
   <footer class="footer">
-    <p>&copy; 2023 Atelier Dassi - Mécanique Moto. Tous droits réservés.</p>
+    <p>&copy; 2024 Atelier Dassi - Mécanique Moto. Tous droits réservés.</p>
     <p>Commune de Zè, Bénin | Tel: +229 97981218 | Email: <a href="mailto:dassiedmond@gmail.com">dassiedmond@gmail.com</a></p>
   </footer>
 </body>
